--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Vladilen CV</title>
+    <title>Мое резюме</title>
   </head>
   <body>
     <table cellspacing="15">
@@ -11,8 +11,8 @@
           <img src="avatar.jpeg" width="200" alt="тут моя фотка" />
         </td>
         <td>
-          <h1>Владилен Минин</h1>
-          <p><em>Я основатель одноименного <strong>Youtube канала</strong></em></p>
+          <h1>  Я   </h1>
+          <p><em>Я основатель </em></p>
           <p>Я люблю путешестовать, заниматься спортом и программировать</p>
         </td>
       </tr>
@@ -22,8 +22,8 @@
 
     <h2>Мои социальные сети</h2>
     <ul>
-      <li><a href="https://instagram.com/vladilen.minin" target="_blank">Instagram</a></li>
-      <li><a target="_blank" href="https://t.me/js_by_vladilen">Telegram</a></li>
+      <li><a href="" target="_blank">Instagram</a></li>
+      <li><a target="_blank" href="">Telegram</a></li>
     </ul>
 
     <hr>
